Fix: Reduce bullet point spacing and improve alignment in resume section

--- a/_sass/cvio/layout.scss
+++ b/_sass/cvio/layout.scss
@@ -1100,13 +1100,21 @@
 		}
 		ul {
 			margin: 10px 0 10px 0;
-			padding-left: 18px;
+			padding-left: 0;
+			list-style: none;
 			li {
-				margin: 8px 0;
-				padding: 0;
+				margin: 5px 0;
+				padding: 0 0 0 15px;
 				line-height: 1.6;
+				position: relative;
 				&:last-child {
 					margin-bottom: 0;
+				}
+				&:before {
+					content: "•";
+					position: absolute;
+					left: 0;
+					top: 0;
 				}
 			}
 		}
